--- a/README.org
+++ b/README.org
@@ -1,11 +1,11 @@
 #+author: conao3
 #+date: <2020-03-20 Fri>
 
-[[https://github.com/conao3/dired-memo.el][https://raw.githubusercontent.com/conao3/files/master/blob/headers/png/dired-memo.el.png]]
-[[https://github.com/conao3/dired-memo.el/blob/master/LICENSE][https://img.shields.io/github/license/conao3/dired-memo.el.svg?style=flat-square]]
-[[https://github.com/conao3/dired-memo.el/releases][https://img.shields.io/github/tag/conao3/dired-memo.el.svg?style=flat-square]]
-[[https://github.com/conao3/dired-memo.el/actions][https://github.com/conao3/dired-memo.el/workflows/Main%20workflow/badge.svg]]
-[[https://app.codacy.com/project/conao3/dired-memo.el/dashboard][https://img.shields.io/codacy/grade/62a36f4f04524d5e8c758440e8071c45.svg?logo=codacy&style=flat-square]]
+[[https://github.com/conao3/dired-lsi.el][https://raw.githubusercontent.com/conao3/files/master/blob/headers/png/dired-lsi.el.png]]
+[[https://github.com/conao3/dired-lsi.el/blob/master/LICENSE][https://img.shields.io/github/license/conao3/dired-lsi.el.svg?style=flat-square]]
+[[https://github.com/conao3/dired-lsi.el/releases][https://img.shields.io/github/tag/conao3/dired-lsi.el.svg?style=flat-square]]
+[[https://github.com/conao3/dired-lsi.el/actions][https://github.com/conao3/dired-lsi.el/workflows/Main%20workflow/badge.svg]]
+[[https://app.codacy.com/project/conao3/dired-lsi.el/dashboard][https://img.shields.io/codacy/grade/62a36f4f04524d5e8c758440e8071c45.svg?logo=codacy&style=flat-square]]
 [[https://www.patreon.com/conao3][https://img.shields.io/badge/patreon-become%20a%20patron-orange.svg?logo=patreon&style=flat-square]]
 [[https://twitter.com/conao_3][https://img.shields.io/badge/twitter-@conao__3-blue.svg?logo=twitter&style=flat-square]]
 [[https://conao3-support.slack.com/join/shared_invite/enQtNjUzMDMxODcyMjE1LWUwMjhiNTU3Yjk3ODIwNzAxMTgwOTkxNmJiN2M4OTZkMWY0NjI4ZTg4MTVlNzcwNDY2ZjVjYmRiZmJjZDU4MDE][https://img.shields.io/badge/chat-on_slack-blue.svg?logo=slack&style=flat-square]]
@@ -28,7 +28,7 @@ Add memo to directory and show it in dired.
 
 * Install
 #+begin_src emacs-lisp
-  (leaf dired-memo :ensure t)
+  (leaf dired-lsi :ensure t)
 #+end_src
 
 * Usage
@@ -60,9 +60,9 @@ Below operation flow is recommended.
   git checkout [feature-branch]     # Checkout branch named [feature-branch]
 
   # <edit loop>
-  emacs dired-memo.el             # Edit something you want
+  emacs dired-lsi.el             # Edit something you want
 
-  make test                         # Test dired-memo
+  make test                         # Test dired-lsi
   git commit -am "brabra"           # Commit (auto-run test before commit)
   # </edit loop>
 
@@ -77,7 +77,7 @@ Below operation flow is recommended.
 #+begin_example
   General Public License Version 3 (GPLv3)
   Copyright (c) Naoya Yamashita - https://conao3.com
-  https://github.com/conao3/dired-memo.el/blob/master/LICENSE
+  https://github.com/conao3/dired-lsi.el/blob/master/LICENSE
 #+end_example
 
 ** Author
