--- a/README.org
+++ b/README.org
@@ -41,8 +41,7 @@ If you use [[https://github.com/conao3/dired-git.el][dired-git]], I suggest belo
   (leaf dired-lsi
     :ensure t
     :custom ((dired-lsi--create-spacer-fn
-              . (setq dired-lsi--create-spacer-fn
-                      (lambda () (when all-the-icons-dired-mode "  \t")))))
+              . (lambda () (when all-the-icons-dired-mode "  \t"))))
     :hook dired-mode-hook)
 #+end_src
 
