--- a/README.org
+++ b/README.org
@@ -78,10 +78,10 @@ After edit ~.description.lsi~, please revert dired buffer
 (In dired buffer, ~M-x dired-revert (g)~) to reflect the change.
 
 * Customize
-- dired-lsi-separator :: Separetor between item and description.
+- dired-lsi-separator :: Separator between item and description.
 - dired-lsi--create-spacer-fn :: Create additional spacer function.
 
-  This variable shuold be function symbol or lambda function.
+  This variable should be function symbol or lambda function.
   That function called with empty argument and should return string or nil.
 
 * Information
@@ -133,4 +133,3 @@ Below operation flow is recommended.
 - Naoya Yamashita ([[https://github.com/conao3][conao3]])
 
 ** Contributors
-
